# Parking-project

./: CMakeLists.txt  car_detection.cpp  parking.cpp  qt.cpp  util.h
bulid/: CMakeCache.txt  Main1Executable  Main2Executable  Makefile  cmake_install.cmake
bulid/.qt/: QtDeploySupport.cmake
bulid/Main1Executable_autogen/: deps  moc_predefs.h
bulid/Main1Executable_autogen/include/: qt.moc  qt.moc.d
bulid/Main2Executable_autogen/: deps  moc_predefs.h
src/: detect_numberPlate.cpp
